[package]
name = "torrent"
version = "0.1.2"
authors = ["seb-odessa <seb@ukr.net>"]

[dependencies]
    log = "*"
    env_logger = "*"
    rand = "*"
    time = "*"
    serde = "*"
    reqwest = "*"
    rust-crypto = "*"
    serde_bytes = "*"
    serde_derive = "*"
    serde_bencode = { git = "https://github.com/seb-odessa/serde-bencode.git" }
    bencode = "*"
    byteorder = "*"
    rustc-serialize = "*"
    rusqlite = "*"
